codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupted_turn_clears_visible_running_hook.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"before interrupt:\\n{before_interrupt}\\nafter interrupt:\\n{}\",\nhook_status_frame(&chat, 80))"
---
before interrupt:
"                                                                                "
"• Working (0s • esc to interrupt) · checking command policy                     "
"                                                                                "
"                                                                                "
"› Ask Moedex to do anything                                                     "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
after interrupt:
"                                                                                "
"                                                                                "
"› Ask Moedex to do anything                                                     "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
